# ot_harjoitusty-

./: README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
twitter_application/: .coveragerc  .env  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
twitter_application/data/: database.sqlite
twitter_application/documentation/: architecture.md  changelog.md  instructions.md  requirementspecification.md  timeaccounting.md
twitter_application/src/: config.py  db_connection.py  index.py  initialize_db.py
twitter_application/src/entities/: comment.py  follow.py  like.py  tweet.py  user.py
twitter_application/src/repositories/: user_repository.py
twitter_application/src/services/: comment_service.py  follow_service.py  like_service.py  tweet_service.py  user_service.py
twitter_application/src/tests/: user_service_test.py
twitter_application/src/ui/: comment_view.py  dashboard_events.py  dashboard_ui.py  dashboard_view.py  login_view.py  register_ui.py  register_view.py  ui.py
